--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,5 +5,16 @@ sitemap: false
 permalink: /404.html
 ---
 
-I don't know what you did, but it was wrong. Here's nothing.
+I don't know what you did, but it was wrong. 
+<br>Here's nothing except a Cat that plays piano.
+<video controls width="250">
+
+    <source src="/files/cat_piano.mp4"
+            type="video/webm">
+
+    <source src="/files/cat_piano.mp4"
+            type="video/mp4">
+
+    You can't watch this video, because you're Browser is trash.
+</video>
 
