--- a/_pages/404.md
+++ b/_pages/404.md
@@ -4,10 +4,10 @@ excerpt: "404 Page not found. Your pixels are in another canvas."
 sitemap: false
 permalink: /404.html
 ---
-
-I don't know what you did, but it was wrong. 
-<br>Here's nothing except a Cat that plays piano.
-<video controls width="250">
+<br>
+<center>I don't know what you did, but it was wrong.</center> 
+<center><br>Here's nothing except a Cat that plays piano.</center>
+<center><video controls width="250">
 
     <source src="/files/cat_piano.mp4"
             type="video/webm">
@@ -16,5 +16,5 @@ I don't know what you did, but it was wrong.
             type="video/mp4">
 
     You can't watch this video, because you're Browser is trash.
-</video>
+</video></center>
 
