--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,12 +1,12 @@
 ---
-title: "404 Page Not Found"
+title: "<center>404 Page Not Found</center>"
 excerpt: "404 Page not found. Your pixels are in another canvas."
 sitemap: false
 permalink: /404.html
 ---
 <br>
 <center>I don't know what you did, but it was wrong.</center> 
-<center><br>Here's nothing except a Cat that plays piano.</center>
+<center>Here's nothing except a Cat that plays piano.</center>
 <center><video controls width="250">
 
     <source src="/files/cat_piano.mp4"
