--- a/_pages/404.md
+++ b/_pages/404.md
@@ -4,6 +4,17 @@ excerpt: "404 Page not found. Your pixels are in another canvas."
 sitemap: false
 permalink: /404.html
 ---
+<head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-157295670-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-157295670-1');
+</script>
+</head>
 <br>
 <center>I don't know what you did, but it was wrong.</center> 
 <center>Here's nothing except a Cat that plays piano.</center>
